[gd_scene load_steps=2 format=3 uid="uid://dgcxqacqnb2gj"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_p7vw3"]

[node name="Main" type="Node2D"]

[node name="Menu" type="VBoxContainer" parent="."]
offset_right = 1152.0
offset_bottom = 101.0
script = ExtResource("1_p7vw3")

[node name="PortInput" type="LineEdit" parent="Menu"]
layout_mode = 2
placeholder_text = "Port"

[node name="AdressInput" type="LineEdit" parent="Menu"]
layout_mode = 2
placeholder_text = "Adress"

[node name="Join" type="Button" parent="Menu"]
layout_mode = 2
text = "Join"

[node name="World" type="Node2D" parent="."]
visible = false

[connection signal="pressed" from="Menu/Join" to="Menu" method="_on_join_pressed"]
